--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Hamilton
 description: A minimal and beautiful Jekyll theme best for writing and note-taking.
 author: SGLee
-avatar: /logo.png
+avatar: /내사진.png
 email: qowppp@gmail.com
 
 plugins:
